feat : notebook 破解wifi

--- a/docs/前端/React/e-2.md
+++ b/docs/前端/React/e-2.md
@@ -40,8 +40,14 @@
 ```
 ### 4.Link 与 NavLink
 1. link : 在应用程序周围提供声明式的,可访问的导航。 和V5一样 
-2. V5 NavLink高亮写法   activeClassName="itclass"  router 
-V6高亮写法写法  <NavLink end className={({isActive})=>{ return isActive ?'list-group-item itclass' :'list-group-item' }} to="/about">About</NavLink>
+```js
+    V5 NavLink高亮写法  
+     <NavLink end activeClassName="itclass"   className='list-group-item'/>
+    //   end  匹配了子路由 ,本身(父组件)不亮
+      
+    V6高亮写法写法  
+    className={({isActive})=>{ return isActive ?'list-group-item itclass' :'list-group-item' }} 
+```
 
 ### 5.Navigate
 1. 作用 : 只要< Navigate >组件被渲染, 就会修改路径 , 切换视图 
