常规备份上传

--- a/docs/note/工具使用笔记.md
+++ b/docs/note/工具使用笔记.md
@@ -17,3 +17,6 @@ tree [drive][path] [/F] [/A]
 tree D:\nodejs /f > D:result.txt
 2. 生成当前目录树 输出到 result.text
 tree /f > result.text
+
+## vscode rest client 
+
