--- a/docs/note/工具使用笔记.md
+++ b/docs/note/工具使用笔记.md
@@ -18,5 +18,22 @@ tree D:\nodejs /f > D:result.txt
 2. 生成当前目录树 输出到 result.text
 tree /f > result.text
 
-## vscode rest client 
+## vscode rest client  
+
+vscode 安装 rest client  
+1.创建文件 test.http/test.rest  
+```js
+# 设置端口
+@port= 3022
+###
+GET http://nas.itclass.top:3022/api/getcategoryListAll 
+# content-type: application/json
+
+# {
+#     "name":"Hendry",
+#     "salary":"61888",
+#     "age":"26"
+# }
+```
+
 
