--- a/docs/前端/前端优化方向思考.md
+++ b/docs/前端/前端优化方向思考.md
@@ -5,4 +5,20 @@
 ## 减少网络请求 
  webpack 对小于10kb的图片资源进行base64处理 减少网络请求 （base64会将图片解释为代码形式 ，但会增加体积 ，所以限制小图片进行转换）
  
-  
+## vue优化  
+1. 图片资源懒加载 vue-lazyload 
+1.7、路由懒加载
+1.8、第三方插件的按需引入
+1.9   服务端渲染 SSR or 预渲染
+
+二、Webpack 层面的优化
+
+1.image-webpack-loader
+Webpack 对图片进行压缩
+
+2.3、提取公共代码 
+
+优化 SourceMap
+2.7、构建结果输出分析
+webpack-bundle-analyzer
+我们在项目中 webpack.prod.conf.js 进行配置：
