--- a/docs/后端/docker/常见操作.md
+++ b/docs/后端/docker/常见操作.md
@@ -27,17 +27,4 @@ apk add tennet
 
 ## 容器内安装curl 
 背景 ： docker node容器内 无法使用 apt-get 或者 yum 
-可用命令wget ：
-下载curl安装包：wget http://curl.haxx.se/download/curl-7.38.0.tar.gz
-
-解压：tar -xzvf curl-7.38.0.tar.gz
-
-进入解压后的curl文件夹：cd curl-7.38.0
-
-输入： ./configure --prefix=/usr/local/curl
-
-输入：make && make install
-
-检查安装是否成功：curl --version
-
-测试是否可以使用：curl www.baidu.com
+apk add curl
