--- a/docs/note/插件收藏,.md
+++ b/docs/note/插件收藏,.md
@@ -13,7 +13,9 @@ https://www.west.cn/docs/408273.html    安装 zerotier 服务端
 
 
 
-https://blog.csdn.net/smzq123/article/details/128760942  主要参考
+https://blog.csdn.net/smzq123/article/details/128760942  
+
+https://zhuanlan.zhihu.com/p/605544905      主要参考
 
 
 
